[workspace]
resolver = "2"
members = [
    "warpforge-api",
    "warpforge-cli",
    "warpforge-executors",
    "warpforge-terminal",
    "warpforge-visualize",
    "catverters",
    "catverters-derive",
    "testfiles-derive",
    "oci-unpack",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
thiserror = "*"
indexmap = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["preserve_order"] }
crossbeam-channel = "*"
str-cat = "*"
json-patch = "*"
expect-test = "*"
syscalls = "*"
sha2 = "*"
rand = "*"
oci-client = "*"
tar = "*"
