[workspace]
resolver = "2"
members = [
    "catverters",
    "catverters-derive",
    "json-with-position",
    "oci-unpack",
    "testfiles-derive",
    "warpforge-api",
    "warpforge-cli",
    "warpforge-cfg",
    "warpforge-depot",
    "warpforge-executors",
    "warpforge-terminal",
    "warpforge-validate",
    "warpforge-visualize",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
thiserror = "*"
indexmap = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["preserve_order"] }
crossbeam-channel = "*"
str-cat = "*"
json-patch = "*"
expect-test = "*"
syscalls = "*"
sha2 = "*"
rand = "*"
oci-client = "*"
tar = "*"
flate2 = "*"
pathrs = "*"
