[package]
name = "oci-unpack"
version = "0.1.0"
edition.workspace = true

[dependencies]
oci-spec = "*"
file-mode = "*"
flate2 = "*"
filetime = "*"

oci-client.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true

[dev-dependencies]
# Used for example binary.
tokio.workspace = true
