[package]
name = "oci-unpack"
version = "0.1.0"
edition.workspace = true

[dependencies]
oci-spec = "*"
file-mode = "*"
filetime = "*"
# Using tokio so we can correctly use oci-client.
# Using runtimes like async-std or futures-executor lead to problems while testing.
tokio = { version = "*", features = ["rt-multi-thread"] }

oci-client.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
indexmap.workspace = true
flate2.workspace = true
