[package]
name = "warpforge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
catverters = { path = "../catverters" }
catverters-derive = { path = "../catverters-derive" }

indexmap.workspace = true
serde = { version = "*", features = ["derive"] }
serde_with = "*"
derive_more = "*"

[dev-dependencies]
testfiles-derive = { path = "../testfiles-derive" }

serde_json = { version = "*", features = ["preserve_order"] }
memchr = "*"
indoc = "*"
expect-test.workspace = true
