[package]
name = "warpforge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
catverters = { path = "../catverters" }
catverters-derive = { path = "../catverters-derive" }

indexmap.workspace = true
serde.workspace = true
serde_with = "*"
derive_more = "*"
parse-display.workspace = true
serde_yml.workspace = true
itoa.workspace = true
ryu.workspace = true

[dev-dependencies]
testfiles-derive = { path = "../testfiles-derive" }
serde_json.workspace = true
memchr = "*"
indoc = "*"
expect-test.workspace = true
