[package]
name = "warpforge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
catverters = { path = "../catverters" }
catverters-derive = { path = "../catverters-derive" }

derive_more = { version = "*", features = ["from_str", "display"] }
indexmap.workspace = true
serde.workspace = true
serde_with = "*"

[dev-dependencies]
testfiles-derive = { path = "../testfiles-derive" }

serde_json.workspace = true
memchr = "*"
indoc = "*"
expect-test.workspace = true
