[package]
name = "warpforge-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
warpforge-api = { path = "../warpforge-api" }
warpforge-visualize = { path = "../warpforge-visualize" }

clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1" }
serde_json = { version = "1" }
thiserror.workspace = true
