[package]
name = "warpforge-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
warpforge-api = { path = "../warpforge-api" }
warpforge-executors = { path = "../warpforge-executors" }
warpforge-terminal = { path = "../warpforge-terminal" }
warpforge-validate = { path = "../warpforge-validate" }
warpforge-visualize = { path = "../warpforge-visualize" }

clap = { version = "4.3.0", features = ["derive"] }
ariadne = "*"

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
