[package]
name = "warpforge-executors"
version = "0.1.0"
edition.workspace = true

[dependencies]
warpforge-api = { path = "../warpforge-api" }

thiserror.workspace = true
tokio.workspace = true
indexmap.workspace = true
serde_json.workspace = true
str-cat.workspace = true
json-patch.workspace = true
