[package]
name = "warpforge-executors"
version = "0.1.0"
edition.workspace = true

[dependencies]
warpforge-api = { path = "../warpforge-api" }
warpforge-terminal = { path = "../warpforge-terminal" }
oci-unpack = { path = "../oci-unpack" }

thiserror.workspace = true
crossbeam-channel.workspace = true
indexmap.workspace = true
serde_json.workspace = true
str-cat.workspace = true
json-patch.workspace = true
syscalls.workspace = true
rand.workspace = true
oci-client.workspace = true
tar.workspace = true
sha2.workspace = true
flate2.workspace = true

tempfile = "*"

[dev-dependencies]
expect-test.workspace = true
