[package]
name = "warpforge-validate"
version = "0.1.0"
edition.workspace = true

[dependencies]
json-with-position = { path = "../json-with-position" }
oci-unpack = { path = "../oci-unpack" }
warpforge-api = { path = "../warpforge-api" }
warpforge-terminal = { path = "../warpforge-terminal" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
