[package]
name = "warpforge-visualize"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warpforge-api = { path = "../warpforge-api" }

serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["preserve_order"] }
derive_more = "*"
openssl = { version = "*", features = ["vendored"] }
reqwest = { version = "*", features = ["blocking"] }
indexmap.workspace = true
