[package]
name = "warpforge-visualize"
version = "0.1.0"
edition.workspace = true

[dependencies]
warpforge-api = { path = "../warpforge-api" }

serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["preserve_order"] }
derive_more = "*"
openssl = { version = "*", features = ["vendored"] }
reqwest = { version = "*", features = ["blocking"] }
indexmap.workspace = true
